# PeregrineDB

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
tests/: testing.rs
