[package]
name = "peregrine_db"
version = "0.1.0"
authors = ["Marshall Belles"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["db","database","hash","table","store","storage"]
include = ["src/lib.rs", "Cargo.toml"]
description = "Peregrine DB is an in-memory thread-safe data store library for Rust."
repository = "https://github.com/MarshallBelles/PeregrineDB"
documentation = "https://github.com/MarshallBelles/PeregrineDB"

[dependencies]
snafu = "0.6.8"

[dev-dependencies]
lazy_static = "1.4.0"
tokio-test = "*"
